   to /path under your home directory.
   http://rt.cpan.org/Ticket/Display.html?id=29484

 - the old dynaload code used Mach API functions to load dynamic
   libraries on Mac OS X.  These APIs have been deprecated in OS X
   10.5 and were causing some build problems.
   So henceforth Imager uses the dlopen() family of functions, and you 
   will need version 10.3 or later of OS X.

Bug fixes:

 - samples/gifscale.pl sourced the base value for gif_top from
   gif_left.
   Thanks to Eleneldil G. Arilou for pointing this out.

 - t/t82inline.t no longer loads B at runtime, to work around a bug
   in some 5.005_0[45] installations.
   http://rt.cpan.org/Ticket/Display.html?id=30508

 - work around Module::Depends::Intrusive bug #21229
   http://rt.cpan.org/Ticket/Display.html?id=30520

 - the hardinvert filter no-longer inverts the alpha channel.
   http://rt.cpan.org/Ticket/Display.html?id=30002

 - the hardinvert filter now supports large samples

Imager 0.61_02 - 28 November 2007
==============

 - major TIFF support re-work
   http://rt.cpan.org/Ticket/Display.html?id=20329

 - added a C level image interface for accessing samples from 1-32
   bits, exposed this at the perl level in getsamples()

 - the conv filter now works at floating point precision for high bit
   images

 - added is_bilevel method to test whether an image should be written as
   a bilevel image if the image format supports it.

 - added -log-stderr as an Imager import list option

 - added some important types to Imager::APIRef

 - added test_image_double() to Imager::Test

Bug fixes:

 - Imager::Fountain couldn't read GIMP gradient files with 10 or more
   segments

 - the scale() method with qtype mixing now handles images with an
   alpha channel correctly.

 - fixed a broken link from the "animated GIF" entry in the concept index.
   Thanks to Slaven Rezic.
   http://rt.cpan.org/Ticket/Display.html?id=30889

 - on some perl's the infix expression parser test would fail due to