@@ -57,9 +57,10 @@ use constant RBC_HSVA => 47;
 use constant RBC_ALPHA => 48;
 use constant RBC_LOG => 49;
 use constant RBC_EXP => 50;
-use constant RBC_OP_COUNT => 51;
+use constant RBC_DET => 51;
+use constant RBC_OP_COUNT => 52;
 
-@EXPORT = qw(RBC_ADD RBC_SUBTRACT RBC_MULT RBC_DIV RBC_MOD RBC_POW RBC_UMINUS RBC_MULTP RBC_ADDP RBC_SUBTRACTP RBC_SIN RBC_COS RBC_ATAN2 RBC_SQRT RBC_DISTANCE RBC_GETP1 RBC_GETP2 RBC_GETP3 RBC_VALUE RBC_HUE RBC_SAT RBC_HSV RBC_RED RBC_GREEN RBC_BLUE RBC_RGB RBC_INT RBC_IF RBC_IFP RBC_LE RBC_LT RBC_GE RBC_GT RBC_EQ RBC_NE RBC_AND RBC_OR RBC_NOT RBC_ABS RBC_RET RBC_JUMP RBC_JUMPZ RBC_JUMPNZ RBC_SET RBC_SETP RBC_PRINT RBC_RGBA RBC_HSVA RBC_ALPHA RBC_LOG RBC_EXP RBC_OP_COUNT);
+@EXPORT = qw(RBC_ADD RBC_SUBTRACT RBC_MULT RBC_DIV RBC_MOD RBC_POW RBC_UMINUS RBC_MULTP RBC_ADDP RBC_SUBTRACTP RBC_SIN RBC_COS RBC_ATAN2 RBC_SQRT RBC_DISTANCE RBC_GETP1 RBC_GETP2 RBC_GETP3 RBC_VALUE RBC_HUE RBC_SAT RBC_HSV RBC_RED RBC_GREEN RBC_BLUE RBC_RGB RBC_INT RBC_IF RBC_IFP RBC_LE RBC_LT RBC_GE RBC_GT RBC_EQ RBC_NE RBC_AND RBC_OR RBC_NOT RBC_ABS RBC_RET RBC_JUMP RBC_JUMPZ RBC_JUMPNZ RBC_SET RBC_SETP RBC_PRINT RBC_RGBA RBC_HSVA RBC_ALPHA RBC_LOG RBC_EXP RBC_DET RBC_OP_COUNT);
 
 %Attr =
   (
@@ -126,6 +127,14 @@ use constant RBC_OP_COUNT => 51;
     'parms' => 1,
     'result' => 'r',
     'types' => 'r',
+    },
+  'det' =>
+    {
+    'func' => 1,
+    'opcode' => 51,
+    'parms' => 4,
+    'result' => 'r',
+    'types' => 'rrrr',
     },
   'distance' =>
     {
@@ -346,7 +355,7 @@ use constant RBC_OP_COUNT => 51;
   'op_count' =>
     {
     'func' => 0,
-    'opcode' => 51,
+    'opcode' => 52,
     'parms' => 0,
     'result' => undef,
     'types' => '',
@@ -369,10 +378,10 @@ use constant RBC_OP_COUNT => 51;
     },
   'print' =>
     {
-    'func' => 0,
+    'func' => 1,
     'opcode' => 45,
     'parms' => 1,
-    'result' => undef,
+    'result' => 'r',
     'types' => 'r',
     },
   'red' =>
